<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/text_box_ome"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/WhiteBox"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp" android:id="@+id/box_one"/>
    <TextView
            android:text="@string/text_box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/box_two" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/box_one" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/text_box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_three" style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/box_four" android:layout_marginTop="0dp"
            app:layout_constraintTop_toTopOf="@+id/box_two" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/text_box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_four" style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/box_three"
            app:layout_constraintBottom_toTopOf="@+id/box_five" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>
    <TextView
            android:text="@string/text_box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/box_five" style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/box_two" app:layout_constraintTop_toBottomOf="@+id/box_four"
            android:layout_marginBottom="0dp" app:layout_constraintStart_toEndOf="@+id/box_two"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>
    <TextView
            android:text="@string/text_how_to_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/textView2" android:textSize="24sp"/>
    <TextView
            android:text="@string/text_instructions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/box_two"
            app:layout_constraintVertical_bias="0.052" app:layout_constraintStart_toEndOf="@+id/textView"
            android:layout_marginStart="16dp" app:layout_constraintHorizontal_bias="1.0"/>

</android.support.constraint.ConstraintLayout>